...
          android:textColor="@color/component_color_shared_secondary_1_text_color"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/admin_pin_warning_text"
          style="@style/Subtitle1ViewStart"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/admin_pin_pin_description"
          android:textColor="@color/component_color_shared_secondary_1_text_color"
          app:layout_constraintEnd_toEndOf="@id/admin_pin_main_text"
          app:layout_constraintStart_toStartOf="@+id/admin_pin_main_text"
          app:layout_constraintTop_toBottomOf="@+id/admin_pin_main_text" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/admin_pin_input_pin"
          style="@style/TextInputLayout"
          android:layout_width="@dimen/admin_pin_activity_input_width"
          android:layout_height="wrap_content"
          android:layout_marginTop="28dp"
          android:hint="@string/admin_pin_new_pin"
          app:errorMessage="@{viewModel.pinErrorMsg}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/admin_pin_warning_text">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/admin_pin_input_pin_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="5"
            android:text="@{viewModel.savedPin}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/admin_pin_input_confirm_pin"
          style="@style/TextInputLayout"
          android:layout_width="@dimen/admin_pin_activity_input_width"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:hint="@string/admin_pin_new_confirm"
          app:errorMessage="@{viewModel.confirmPinErrorMsg}"
          app:layout_constraintEnd_toEndOf="@id/admin_pin_input_pin"
          app:layout_constraintStart_toStartOf="@id/admin_pin_input_pin"
          app:layout_constraintTop_toBottomOf="@+id/admin_pin_input_pin">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/admin_pin_input_confirm_pin_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="5"
            android:text="@{viewModel.savedConfirmPin}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
          android:id="@+id/submit_button"
          style="@style/StateButtonActive"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="0dp"
          android:layout_marginTop="48dp"
          android:layout_marginEnd="0dp"
...
