package org.oppia.android.app.profile

import android.app.Application
import android.content.Context
import android.graphics.Typeface
import android.text.Spanned
import android.text.style.StyleSpan
import android.view.View
import android.view.ViewParent
import android.widget.FrameLayout
import android.widget.TextView
import androidx.appcompat.app.AppCompatActivity
import androidx.core.widget.NestedScrollView
import androidx.test.core.app.ActivityScenario.launch
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.PerformException
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.closeSoftKeyboard
import androidx.test.espresso.action.ViewActions.pressImeActionButton
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.Intents.intended
import androidx.test.espresso.intent.matcher.IntentMatchers.hasComponent
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.isClickable
import androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isRoot
import androidx.test.espresso.matcher.ViewMatchers.withContentDescription
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.util.HumanReadables
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.google.common.truth.Truth.assertThat
import dagger.Component
import org.hamcrest.Matchers
import org.hamcrest.Matchers.allOf
import org.hamcrest.Matchers.not
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.oppia.android.app.activity.ActivityComponent
import org.oppia.android.app.activity.ActivityComponentFactory
import org.oppia.android.app.activity.route.ActivityRouterModule
import org.oppia.android.app.administratorcontrols.AdministratorControlsActivity
import org.oppia.android.app.application.ApplicationComponent
import org.oppia.android.app.application.ApplicationInjector
import org.oppia.android.app.application.ApplicationInjectorProvider
import org.oppia.android.app.application.ApplicationModule
import org.oppia.android.app.application.ApplicationStartupListenerModule
import org.oppia.android.app.application.testing.TestingBuildFlavorModule
import org.oppia.android.app.devoptions.DeveloperOptionsModule
import org.oppia.android.app.devoptions.DeveloperOptionsStarterModule
import org.oppia.android.app.model.ScreenName
import org.oppia.android.app.player.state.itemviewmodel.SplitScreenInteractionModule
import org.oppia.android.app.shim.ViewBindingShimModule
import org.oppia.android.app.test.R
import org.oppia.android.app.translation.testing.ActivityRecreatorTestModule
import org.oppia.android.app.utility.OrientationChangeAction.Companion.orientationLandscape
import org.oppia.android.data.backends.gae.NetworkConfigProdModule
import org.oppia.android.data.backends.gae.RetrofitModule
import org.oppia.android.data.backends.gae.RetrofitServiceModule
import org.oppia.android.domain.classify.InteractionsModule
import org.oppia.android.domain.classify.rules.algebraicexpressioninput.AlgebraicExpressionInputModule
import org.oppia.android.domain.classify.rules.continueinteraction.ContinueModule
import org.oppia.android.domain.classify.rules.dragAndDropSortInput.DragDropSortInputModule
import org.oppia.android.domain.classify.rules.fractioninput.FractionInputModule
import org.oppia.android.domain.classify.rules.imageClickInput.ImageClickInputModule
import org.oppia.android.domain.classify.rules.itemselectioninput.ItemSelectionInputModule
import org.oppia.android.domain.classify.rules.mathequationinput.MathEquationInputModule
import org.oppia.android.domain.classify.rules.multiplechoiceinput.MultipleChoiceInputModule
import org.oppia.android.domain.classify.rules.numberwithunits.NumberWithUnitsRuleModule
import org.oppia.android.domain.classify.rules.numericexpressioninput.NumericExpressionInputModule
import org.oppia.android.domain.classify.rules.numericinput.NumericInputRuleModule
import org.oppia.android.domain.classify.rules.ratioinput.RatioInputModule
import org.oppia.android.domain.classify.rules.textinput.TextInputRuleModule
import org.oppia.android.domain.exploration.ExplorationProgressModule
import org.oppia.android.domain.exploration.ExplorationStorageModule
import org.oppia.android.domain.hintsandsolution.HintsAndSolutionConfigModule
import org.oppia.android.domain.hintsandsolution.HintsAndSolutionProdModule
import org.oppia.android.domain.onboarding.ExpirationMetaDataRetrieverModule
import org.oppia.android.domain.oppialogger.LogStorageModule
import org.oppia.android.domain.oppialogger.LoggingIdentifierModule
import org.oppia.android.domain.oppialogger.analytics.ApplicationLifecycleModule
import org.oppia.android.domain.oppialogger.analytics.CpuPerformanceSnapshotterModule
import org.oppia.android.domain.oppialogger.logscheduler.MetricLogSchedulerModule
import org.oppia.android.domain.oppialogger.loguploader.LogReportWorkerModule
import org.oppia.android.domain.platformparameter.PlatformParameterSingletonModule
import org.oppia.android.domain.question.QuestionModule
import org.oppia.android.domain.workmanager.WorkManagerConfigurationModule
import org.oppia.android.testing.OppiaTestRule
import org.oppia.android.testing.TestLogReportingModule
import org.oppia.android.testing.espresso.EditTextInputAction.appendText
import org.oppia.android.testing.espresso.TextInputAction.Companion.hasErrorText
import org.oppia.android.testing.espresso.TextInputAction.Companion.hasNoErrorText
import org.oppia.android.testing.firebase.TestAuthenticationModule
import org.oppia.android.testing.junit.InitializeDefaultLocaleRule
import org.oppia.android.testing.platformparameter.TestPlatformParameterModule
import org.oppia.android.testing.profile.ProfileTestHelper
import org.oppia.android.testing.robolectric.RobolectricModule
import org.oppia.android.testing.threading.TestCoroutineDispatchers
import org.oppia.android.testing.threading.TestDispatcherModule
import org.oppia.android.testing.time.FakeOppiaClockModule
import org.oppia.android.util.accessibility.AccessibilityTestModule
import org.oppia.android.util.caching.AssetModule
import org.oppia.android.util.gcsresource.GcsResourceModule
import org.oppia.android.util.locale.LocaleProdModule
import org.oppia.android.util.logging.CurrentAppScreenNameIntentDecorator.extractCurrentAppScreenName
import org.oppia.android.util.logging.LoggerModule
import org.oppia.android.util.logging.SyncStatusModule
import org.oppia.android.util.networking.NetworkConnectionDebugUtilModule
import org.oppia.android.util.networking.NetworkConnectionUtilDebugModule
import org.oppia.android.util.parser.html.HtmlParserEntityTypeModule
import org.oppia.android.util.parser.image.GlideImageLoaderModule
import org.oppia.android.util.parser.image.ImageParsingModule
import org.robolectric.annotation.Config
import org.robolectric.annotation.LooperMode
import javax.inject.Inject
import javax.inject.Singleton

@RunWith(AndroidJUnit4::class)
@LooperMode(LooperMode.Mode.PAUSED)
@Config(
  application = AdminPinActivityTest.TestApplication::class,
  qualifiers = "port-xxhdpi"
)
class AdminPinActivityTest {
  @get:Rule val initializeDefaultLocaleRule = InitializeDefaultLocaleRule()
  @get:Rule val oppiaTestRule = OppiaTestRule()

  @Inject lateinit var context: Context
  @Inject lateinit var profileTestHelper: ProfileTestHelper
  @Inject lateinit var testCoroutineDispatchers: TestCoroutineDispatchers

  @Before
  fun setUp() {
    Intents.init()
    setUpTestApplicationComponent()
    testCoroutineDispatchers.registerIdlingResource()
    profileTestHelper.initializeProfiles()
  }

  @After
  fun tearDown() {
    testCoroutineDispatchers.unregisterIdlingResource()
    Intents.release()
  }

  @Test
  fun testActivity_createIntent_verifyScreenNameInIntent() {
    val currentScreenName = AdminPinActivity.createAdminPinActivityIntent(
      context = context,
      profileId = 0,
      colorRgb = -10710042,
      adminPinEnum = 0
    ).extractCurrentAppScreenName()

    assertThat(currentScreenName).isEqualTo(ScreenName.ADMIN_PIN_ACTIVITY)
  }

  @Test
  fun testAdminPinActivity_hasCorrectActivityLabel() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use { scenario ->
      scenario.onActivity { activity ->
        val title = activity.title

        // Verify that the activity label is correct as a proxy to verify TalkBack will announce the
        // correct string when it's read out.
        assertThat(title).isEqualTo(context.getString(R.string.admin_pin_activity_title))
      }
    }
  }

  @Test
  fun testAdminPinActivity_warningText_isBoldFormatted() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use { scenario ->
      scenario.onActivity { activity ->
        val warningText = activity.findViewById<TextView>(R.id.admin_pin_warning_text).text

        assertThat(warningText).isInstanceOf(Spanned::class.java)
        val boldSpans =
          (warningText as Spanned).getSpans(0, warningText.length, StyleSpan::class.java)
        assertThat(boldSpans).isNotEmpty()
        val hasBoldStyle =
          boldSpans.any { it.style == Typeface.BOLD || it.style == Typeface.BOLD_ITALIC }
        assertThat(hasBoldStyle).isTrue()
      }
    }
  }

  @Test
  fun testAdminPinActivity_inputPin_submit_opensAddProfileActivity() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 1
      )
    ).use {
      testCoroutineDispatchers.runCurrent()
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("12345"),
        closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        nestedScrollTo(),
        appendText("12345"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.submit_button)).perform(nestedScrollTo()).perform(click())
      testCoroutineDispatchers.runCurrent()
      intended(hasComponent(AddProfileActivity::class.java.name))
    }
  }

  @Test
  fun testAdminPinActivity_inputPin_imeAction_opensAddProfileActivity() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 1
      )
    ).use {
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("12345"),
        closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        nestedScrollTo(),
        appendText("12345"),
        pressImeActionButton()
      )
      testCoroutineDispatchers.runCurrent()
      intended(hasComponent(AddProfileActivity::class.java.name))
    }
  }

  @Test
  fun testAdminAuthActivity_inputPin_submit_opensAdminControlsActivity() {
    launch<AdminAuthActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    )
      .use {
        testCoroutineDispatchers.runCurrent()
        onView(
          allOf(
            withId(R.id.admin_pin_input_pin_edit_text),
            isDescendantOfA(withId(R.id.admin_pin_input_pin))
          )
        ).perform(
          appendText("12345"),
          closeSoftKeyboard()
        )
        testCoroutineDispatchers.runCurrent()
        onView(
          allOf(
            withId(R.id.admin_pin_input_confirm_pin_edit_text),
            isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
          )
        ).perform(
          nestedScrollTo(),
          appendText("12345"),
          closeSoftKeyboard()
        )
        testCoroutineDispatchers.runCurrent()
        onView(withId(R.id.submit_button)).perform(nestedScrollTo()).perform(click())
        testCoroutineDispatchers.runCurrent()
        intended(hasComponent(AdministratorControlsActivity::class.java.name))
      }
  }

  @Test
  fun testAdminAuthActivity_inputPin_imeAction_opensAdminControlsActivity() {
    launch<AdminAuthActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    )
      .use {
        onView(
          allOf(
            withId(R.id.admin_pin_input_pin_edit_text),
            isDescendantOfA(withId(R.id.admin_pin_input_pin))
          )
        ).perform(
          appendText("12345"),
          closeSoftKeyboard()
        )
        onView(
          allOf(
            withId(R.id.admin_pin_input_confirm_pin_edit_text),
            isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
          )
        ).perform(
          nestedScrollTo(),
          appendText("12345"),
          pressImeActionButton()
        )
        testCoroutineDispatchers.runCurrent()
        intended(hasComponent(AdministratorControlsActivity::class.java.name))
      }
  }

  @Test
  fun testAdminPinActivity_inputShortPin_clickIsEnabled() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use {
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("123"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.submit_button)).perform(nestedScrollTo())
      onView(withId(R.id.submit_button)).check(matches(isClickable()))
    }
  }

  @Test
  fun testAdminPinActivity_emptyPins_submit_showsPinLengthError() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use {
      onView(withId(R.id.submit_button)).perform(nestedScrollTo(), click())
      onView(withId(R.id.admin_pin_input_pin)).check(
        matches(
          hasErrorText(
            context.resources.getString(R.string.admin_pin_error_pin_length)
          )
        )
      )
      onView(withId(R.id.submit_button)).check(matches(not(isClickable())))
    }
  }

  @Test
  fun testAdminPinActivity_inputShortPin_submit_inputPin_errorIsCleared() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use {
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("123"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.submit_button)).perform(nestedScrollTo(), click())
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("45"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.admin_pin_input_confirm_pin))
        .check(matches(hasNoErrorText()))
      onView(withId(R.id.submit_button)).check(matches(isClickable()))
    }
  }

  @Test
  fun testAdminPinActivity_inputPin_inputWrongConfirmPin_submit_confirmWrongError() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use {
      testCoroutineDispatchers.runCurrent()
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("12345"),
        closeSoftKeyboard()
      )
      testCoroutineDispatchers.runCurrent()
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        appendText("1234"),
        closeSoftKeyboard()
      )
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.submit_button)).perform(nestedScrollTo()).perform(click())
      onView(withId(R.id.admin_pin_input_confirm_pin))
        .check(
          matches(
            hasErrorText(
              context.resources.getString(
                R.string.admin_pin_error_pin_confirm_wrong
              )
            )
          )
        )
      onView(withId(R.id.submit_button)).check(matches(not(isClickable())))
    }
  }

  @Test
  fun testAdminPinActivity_inputPinAndWrongConfirmPin_imeAction_confirmWrongError() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use {
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("12345"),
        closeSoftKeyboard()
      )
      testCoroutineDispatchers.runCurrent()
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        appendText("1234"),
        pressImeActionButton()
      )
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.admin_pin_input_confirm_pin)).check(
        matches(
          hasErrorText(
            context.resources.getString(R.string.admin_pin_error_pin_confirm_wrong)
          )
        )
      )
    }
  }

  @Test
  fun testAdminPinActivity_inputPinAndWrongConfirmPin_submit_inputConfirmPin_errorIsCleared() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use {
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("12345"),
        closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        appendText("1234"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.submit_button)).perform(nestedScrollTo()).perform(click())
      onView(withId(R.id.submit_button)).check(matches(not(isClickable())))
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        appendText("5"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.admin_pin_input_confirm_pin))
        .check(matches(hasNoErrorText()))
      onView(withId(R.id.submit_button)).check(matches(isClickable()))
    }
  }

  @Test
  fun testAdminPinActivity_inputPinAndWrongConfirmPin_inputConfirmPin_errorIsCleared() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 0
      )
    ).use {
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("12345"),
        closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        appendText("1234"),
        pressImeActionButton()
      )
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        appendText("5"),
        closeSoftKeyboard()
      )
      onView(withId(R.id.admin_pin_input_confirm_pin))
        .check(matches(hasNoErrorText()))
    }
  }

  @Test
  fun testAdminPinActivity_closeButton_checkContentDescription() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 1
      )
    ).use {
      onView(withContentDescription(R.string.admin_auth_close)).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testAdminPinActivity_configChange_inputPin_submit_opensAddProfileActivity() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 1
      )
    ).use {
      onView(isRoot()).perform(orientationLandscape())
      closeSoftKeyboard()
      testCoroutineDispatchers.runCurrent()
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("12345"),
        closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        nestedScrollTo(),
        appendText("12345"),
        closeSoftKeyboard()
      )
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.submit_button)).perform(nestedScrollTo(), click())
      testCoroutineDispatchers.runCurrent()
      intended(hasComponent(AddProfileActivity::class.java.name))
    }
  }

  @Test
  fun testAdminPinActivity_configChange_inputPin_imeAction_opensAddProfileActivity() {
    launch<AdminPinActivity>(
      AdminPinActivity.createAdminPinActivityIntent(
        context = context,
        profileId = 0,
        colorRgb = -10710042,
        adminPinEnum = 1
      )
    ).use {
      onView(isRoot()).perform(orientationLandscape())
      closeSoftKeyboard()
      onView(
        allOf(
          withId(R.id.admin_pin_input_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_pin))
        )
      ).perform(
        appendText("12345"),
        closeSoftKeyboard()
      )
      onView(
        allOf(
          withId(R.id.admin_pin_input_confirm_pin_edit_text),
          isDescendantOfA(withId(R.id.admin_pin_input_confirm_pin))
        )
      ).perform(
        nestedScrollTo(),
        appendText("12345"),
        pressImeActionButton()
      )
      testCoroutineDispatchers.runCurrent()
